# reactor-safety-sim

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
docs/: ARCHITECTURE.md  HAZARD_ANALYSIS.md  SAFETY_CASE.md
scripts/: make_demo.cmd  make_demo.ps1  preflight.ps1  run_scenarios.ps1  run_scenarios.sh
src/: lib.rs
tests/: scenarios.rs
