[package]
name = "reactor-safety-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "reactor_safety_sim"
path = "src/lib.rs"

[dependencies]
sim = { path = "crates/sim", version = "0.1.0" }
controller = { path = "crates/controller", version = "0.1.0" }
safety = { path = "crates/safety", version = "0.1.0" }

[workspace]
members = [
  "crates/sim",
  "crates/controller",
  "crates/safety",
  "crates/cli",
  "crates/gui",
]
resolver = "2"
