[package]
name = "gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

sim = { path = "../sim", version = "0.1.0" }
controller = { path = "../controller", version = "0.1.0" }
safety = { path = "../safety", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"